# Megabot

./: .env.example  Dockerfile  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt  speaker.py
megabot/: __main__.py  bgg.py  chifoumi.py  diceRoll.py  dice_parser.py  speaker.py
src/: bgg.py  bot.py  chifoumi.py
